First draft of the finished script

--- a/reminder.conf.example
+++ b/reminder.conf.example
@@ -1,4 +1,5 @@
 [example]
 host: smtp.example.com:25
-username: sample
-password: reallygoodpassword
+user: sample
+pass: reallygoodpassword
+address: example@example.com
